# neuro-oj

./: .dockerignore  .gitignore  AGENTS.md  README.md  ROADMAP.md  docker-compose.e2e.yml  docker-compose.init.yml  docker-compose.prod.yml  docker-compose.yml  env.e2e.template  env.prod.example  pr76-review-fixes.patch  skills-lock.json
noj-core/: AGENTS.md  (+8 more)
noj-judge/: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile.e2e  Dockerfile.prod
noj-judge/docker/evaluator-python/: Dockerfile
noj-judge/docker/python/: Dockerfile
noj-judge/docker/solution-python/: Dockerfile
noj-judge/scripts/: build-sdk-images.sh
noj-judge/sdk/evaluator/noj_evaluator_sdk/: __init__.py  errors.py  logging_config.py  result.py  runner.py  serialization.py
noj-judge/sdk/solution/noj_solution_sdk/: __init__.py  __main__.py  host.py  registry.py  sanitize.py  serialization.py
noj-judge/src/: config.rs  lib.rs  main.rs  mq.rs  types.rs
noj-judge/src/dual/: container.rs  mod.rs  protocol.rs
noj-judge/src/judge/: mod.rs  runner.rs  standard.rs
noj-judge/src/mq/: rpc.rs
noj-judge/src/pool/: copy.rs  exec.rs  metrics.rs  mod.rs  scaler-review-output.json  scaler.rs
noj-judge/src/sandbox/: cache.rs  cleanup.rs  container.rs  download.rs  host_config.rs  mod.rs
noj-judge/tests/: e2e_container_pool.rs  e2e_docker_basic.rs  e2e_dual_container.rs  e2e_full_standard_judge.rs  e2e_problem_limits.rs  e2e_resource_limits.rs  e2e_security_isolation.rs  e2e_standard_judge.rs  e2e_support_package.rs
noj-judge/tests/common/: mod.rs
noj-judge/tests/e2e/: Dockerfile.test-runner  evaluate.py
(+835 files in other folders)
